--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sanity/block-tools": "^0.139.6",
+    "@sanity/block-tools": "^1.149.4",
     "@sanity/client": "^0.139.0",
     "@sanity/import": "^0.139.1",
     "@sanity/schema": "^0.139.6",
+    "@wordpress/autop": "^2.6.0",
     "cheerio": "^1.0.0-rc.2",
     "jsdom": "^13.1.0",
     "json-to-ndjson": "0.0.1",
     "ndjson": "^1.5.0",
+    "request": "^2.88.2",
     "sanitize-html": "^1.20.0",
     "slugify": "^1.3.4",
     "xml-stream": "^0.4.5"
